--- a/src/index.css
+++ b/src/index.css
@@ -188,7 +188,6 @@
     min-height: 100%;
     overflow-x: hidden;
     touch-action: manipulation;
-    padding-top: env(safe-area-inset-top);
     padding-bottom: env(safe-area-inset-bottom);
     padding-left: env(safe-area-inset-left);
     padding-right: env(safe-area-inset-right);
